feat: Add support for KDE neon
Add REUSE toml for licensing information

--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -283,6 +283,12 @@ if any_exists ${isopath}/mxlinux/MX-*.iso; then
   }
 fi
 
+if any_exists ${isopath}/neon/neon-*.iso; then
+  menuentry "neon >" --class neon {
+    configfile "${prefix}/inc-neon.cfg"
+  }
+fi
+
 if any_exists ${isopath}/netrunner/netrunner-*.iso; then
   menuentry "Netrunner >" --class netrunner {
     configfile "${prefix}/inc-netrunner.cfg"
