--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -331,6 +331,12 @@ if any_exists ${isopath}/rhel/rhel-*.iso; then
   }
 fi
 
+if any_exists ${isopath}/rhinolinux/Rhino-*.iso; then
+  menuentry "Rhino Linux >"  --class rhinolinux {
+    configfile "${prefix}/inc-rhinolinux.cfg"
+  }
+fi
+
 if any_exists ${isopath}/rockylinux/Rocky-*.iso; then
   menuentry "Rocky Linux >" --class rockylinux {
     configfile "${prefix}/inc-rockylinux.cfg"
