--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -373,6 +373,12 @@ if any_exists ${isopath}/ubuntubudgie/ubuntu-budgie-*.iso; then
   }
 fi
 
+if any_exists ${isopath}/ubuntumate/ubuntu-mate-*.iso; then
+  menuentry "Ubuntu MATE >" --class ubuntumate {
+    configfile "${prefix}/inc-ubuntumate.cfg"
+  }
+fi
+
 if any_exists ${isopath}/ubuntu/ubuntu-*.iso; then
   menuentry "Ubuntu >" --class ubuntu {
     configfile "${prefix}/inc-ubuntu.cfg"
