feat: Add nitux config files and icons

--- a/grub2/grub.cfg
+++ b/grub2/grub.cfg
@@ -295,6 +295,12 @@ if any_exists ${isopath}/netrunner/netrunner-*.iso; then
   }
 fi
 
+if any_exists ${isopath}/nitrux/nitrux-*.iso; then
+  menuentry "Nitrux >" --class nitrux {
+    configfile "${prefix}/inc-nitrux.cfg"
+  }
+fi
+
 if any_exists ${isopath}/openbsd/*.iso; then
   menuentry "OpenBSD >" --class openbsd {
     configfile "${prefix}/inc-openbsd.cfg"
