docs: Add SPDX LIcense header for neon & rhinolinux configurations

--- a/grub2/inc-rhinolinux.cfg
+++ b/grub2/inc-rhinolinux.cfg
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 dhan <sr.dhanesh@protonmail.com>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 # rhinolinux
 function add_menu {
   isofile="$1"
